--- a/.platform/pip.app.yaml
+++ b/.platform/pip.app.yaml
@@ -11,7 +11,7 @@ name: 'app'
 
 # The runtime the application uses.
 # Complete list of available runtimes: https://docs.platform.sh/create-apps/app-reference.html#types
-type: 'python:3.10'
+stack: 'python@3.10'
 
 # The relationships of the application with services or other applications.
 # The left-hand side is the name of the relationship as it will be exposed
